# mediawiki-sample

./: chunk_extractor.py  parallel_chunk_extractor.py  pyproject.toml
