[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mediawiki-sample"
version = "0.1.0"
description = "chunk extraction"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "duckdb",
    "mwparserfromhell",
    "pip>=25.1.1",
    "tqdm",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
